# cfgimp

./: LICENSE  README.md  pyproject.toml  tox.ini
cfgimp/: __init__.py  cfgimp.py  finder.py
cfgimp/loaders/: __init__.py  base.py  csv.py  json.py  stub.py  toml.py
cfgimp/modules/: __init__.py  array.py  base.py  table.py  unresolved.py
tests/: test_cfgimp.py
